--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
- <div class="d-flex bg-warning">
-    <h1>Hello World</h1>
-    <p>
-        Hi there
-    </p>
-    <i class="fa-brands fa-linkedin"></i>
- </div>
+    <div class="hero">
+        <h3>👋 Hello, I am</h3>
+        <h1>Rocio Hernandez</h1>
+        <h2 class="mb-5">Font-End Developer & Bilingual Educator based in Houston, TX</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Contact me</a>   
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
