Added a container: row and columns.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,40 @@
 </head>
 <body>
     <div class="hero">
-        <h3>👋 Hello, I am</h3>
+        <h3>👋 Hello, I'm</h3>
         <h1>Rocio Hernandez</h1>
         <h2 class="mb-5">Font-End Developer & Bilingual Educator based in Houston, TX</h2>
         <div>
             <a href="#" class="btn btn-branding">Contact me</a>   
         </div>
+    </div>
+    <p class="text-center m-5">
+        Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+         <h2 class="mb-5">
+        Mexican Cuisine App
+         </h2>
+         <p class="mb-4">
+        One of the ways to escape to my wonderful creations is by cooking. 
+        Listening to music and dancing while I'm making a delicious meal is 
+        my go-to for relaxation. I love to do it as loved ones come together 
+        and gather and make memories. 
+        </br>
+        </br>
+       In this application, you can find information about its 
+       history and delicious recipes. My roots come from a small village in 
+       Mexico, where cooking techniques are passed along from generation to 
+       generation. The techniques that make history over 
+       time are shown in a video. Hope you enjoy it!
+       </p>
+      <a href="" class="btn btn-branding-outline">Learn more
+      </a>
+     </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
