--- a/index.html
+++ b/index.html
@@ -26,29 +26,75 @@
         Featured Project which my best projects be choice to show
     </p>
     <div class="container">
-      <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6">
-         <h2 class="mb-5">
-        Mexican Cuisine App
-         </h2>
-         <p class="mb-4">
-        One of the ways to escape to my wonderful creations is by cooking. 
-        Listening to music and dancing while I'm making a delicious meal is 
-        my go-to for relaxation. I love to do it as loved ones come together 
-        and gather and make memories. 
-        </br>
-        </br>
-       In this application, you can find information about its 
-       history and delicious recipes. My roots come from a small village in 
-       Mexico, where cooking techniques are passed along from generation to 
-       generation. The techniques that make history over 
-       time are shown in a video. Hope you enjoy it!
-       </p>
-      <a href="" class="btn btn-branding-outline">Learn more
-      </a>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/mexican-cuisine.jpg"  class="img-fluid" 
+            alt="mexican-cuisine-app-image" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+           <h2 class="mb-5">Mexican Cuisine App</h2>
+           <p class="mb-5 text-muted">
+             One of the ways to escape to my wonderful creations is by cooking. 
+             Listening to music and dancing while I'm making a delicious meal is 
+             my go-to for relaxation. I love to do it as loved ones come together 
+             and gather and make memories. 
+             </br>
+             </br>
+             In this application, you can find information about its 
+             history and delicious recipes. My roots come from a small village in 
+             Mexico, where cooking techniques are passed along from generation to 
+             generation. The techniques that make history over 
+             time are shown in a video. Hope you enjoy it!
+          </p>
+          <a href="https://tiny-torte-e48a9e.netlify.app/" class="btn btn-branding-outline">Learn more
+          </a>
+         </div>
+        </div>
      </div>
-    </div>
+     <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+           <h2 class="mb-5">Weather App</h2>
+           <p class="mb-5 text-muted">
+            As events take place outside or you might be adventoruos to take a trip, 
+            it is important to know if it is going to rain, be cloudy, or sunny. 
+            This application has great features that can state the weather of the 
+            city that you wish to be informed. Also, it showcases the daily report 
+            of its low and high temperatures. 
+          </p>
+          <a href="https://frolicking-clafoutis-5c8cd7.netlify.app/" class="btn btn-branding-outline">Learn more
+          </a>
+         </div>
+        </div>
+        <div class="col d-none d-lg-block">
+            <img src="images/weather-app.jpg"  class="img-fluid" 
+            alt="weather-app-image" />
+        </div>
+     </div>
+     <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/torta-de-lomo.jpg"  class="img-fluid" 
+            alt="torta-de-lomo-app-image" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+           <h2 class="mb-5">I Love Tortas App</h2>
+           <p class="mb-5 text-muted">
+            Are you a fan of sandwiches, then maybe a torta can be one of your 
+            favorites? Eating a torta on the sidelines of a market, the smoke of 
+            gorditas being fried, and the freshness of the sweet aroma of fruits 
+            and vegetables while buying groceries to take to the village, are some 
+            of my childhood memories. The crispiness of the bread with many 
+            combinations and choices of meat, is de-li-cious. If you would like 
+            to know how to make a loma de torta, click at the bottom and I invite 
+            you to make one!
+          </p>
+          <a href="https://dazzling-jalebi-4a3011.netlify.app/" class="btn btn-branding-outline">Learn more
+          </a>
+         </div>
+        </div>
+     </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
