--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
-  <div class="about-section container">
+  <div class="content-container container">
    <div class="row">
     <div class="col-lg-6">
-        <div class="about-section-content">
+        <div class="content">
     <h1 class="mb-4">
         Hi I am Rocio Hernandez
     </h1>
