--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
           </a>
          </div>
         </div>
+        <div class="col">
+          <div class="project-description">
+           <h2 class="mb-5">World Clock App</h2>
+           <p class="mb-5 text-muted">
+            If you want to have access to time for several locations, this 
+            application will be a great selection to have at your fingertips. 
+            From Kuala Lumpur to Valencia are several options to know the time 
+            at their location. Select this app as your time keeper!
+          </p>
+          <a href="https://musical-squirrel-18b301.netlify.app/" class="btn btn-branding-outline">Learn more
+          </a>
+         </div>
+        </div>
      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
