--- a/work.html
+++ b/work.html
@@ -29,18 +29,26 @@
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/weather-app.jpg" 
-        class="img-fluid rounded" alt="mexican-app-image" />
+        class="img-fluid mb-3 rounded" alt="mexican-app-image" />
         <h3 class="text-center m-0">Weather App</h3>
         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/torta-de-lomo.jpg" 
-        class="img-fluid rounded" alt="torta-de-lomo" />
+        class="img-fluid mb-3 rounded" alt="torta-de-lomo" />
         <h3 class="text-center m-0">I Love Tortas App!</h3>
+        <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+      </div>  
+      <div class="col-md-6 mb-4">
+        <img src="images/world-clock-app.jpg" 
+        class="img-fluid mb-3 rounded" alt="world-clock-app" />
+        <h3 class="text-center m-0">World Clock App</h3>
         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
       </div>  
     </div>
    </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
