Added navigation bar in HTML and two logos

--- a/about.html
+++ b/about.html
@@ -36,10 +36,8 @@
         </div>
     </div>
     <div class="col-lg-6">
-      <div class="image-rocio">
-    <img src="images/rocio.jpg" alt="picture of myself" 
-    class="img-fluid border border-5 rounded-circle "/>
-      </div>
+      <img src="images/rocio.jpg" alt="picture of myself"
+      class="img-fluid border border-5 rounded-circle image-rocio"/>
     </div>
    </div>
   </div>
