--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
+  <div class="container">
+   <nav class="d-flex justify-content-between">
+    <a href="/"
+     <img src="images/logo.png" alt="" class="d-none d-md-block" />
+     <img src="images/small-logo.jpg" alt="" class="logo d-block d-md-none" />
+   </a>
+     <ul>
+      <li class="active">
+        <a href="/"> Home </a>
+      </li>
+      <li>
+        <a href="/about.html"> About </a>
+      </li>
+      <li>
+        <a href="/work.html"> Work </a>
+      </li>
+      <li>
+        <a href="/contact.html"> Contact </a>
+      </li>
+     </ul>
+   </nav>
+  </div>
     <div class="hero">
         <h3>👋 Hello, I'm</h3>
         <h1>Rocio Hernandez</h1>
@@ -94,19 +116,25 @@
           </a>
          </div>
         </div>
-        <div class="col">
-          <div class="project-description">
-           <h2 class="mb-5">World Clock App</h2>
-           <p class="mb-5 text-muted">
-            If you want to have access to time for several locations, this 
-            application will be a great selection to have at your fingertips. 
-            From Kuala Lumpur to Valencia are several options to know the time 
-            at their location. Select this app as your time keeper!
-          </p>
-          <a href="https://musical-squirrel-18b301.netlify.app/" class="btn btn-branding-outline">Learn more
-          </a>
-         </div>
-        </div>
+        <div class="row mb-5">
+          <div class="col">
+            <div class="project-description">
+             <h2 class="mb-5">World Clock</h2>
+             <p class="mb-5 text-muted">
+              If you want to have access to time for several locations, this 
+              application will be a great selection to have at your fingertips. 
+              From Kuala Lumpur to Valencia are several options to know the time 
+              at their location. Select this app as your time keeper!
+            </p>
+            <a href="https://musical-squirrel-18b301.netlify.app/" class="btn btn-branding-outline">Learn more
+            </a>
+           </div>
+          </div>
+          <div class="col d-none d-lg-block">
+              <img src="images/world-clock-app.jpg"  class="img-fluid" 
+              alt="weather-app-image" />
+          </div>
+       </div>
      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
