Added footer to my index

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Rubik:wght@400;700&display=swap" 
     rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
   <div class="container">
    <nav class="d-flex justify-content-between">
-    <a href="/"
-     <img src="images/logo.png" alt="" class="d-none d-md-block" />
+    <a href="/">
+     <img src="images/logo.png" alt="" class="d-none d-md-block" /> 
      <img src="images/small-logo.jpg" alt="" class="logo d-block d-md-none" />
    </a>
      <ul>
@@ -136,6 +137,30 @@
           </div>
        </div>
      </div>
+     <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a href="" class="btn btn-branding mt-3"> Contact me </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:rociohernandez_11.com" class="email-link">
+          rociohernandez_11@yahoo.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/rociohleija" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/rocio-hernandez-10b36b27b/" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
