--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Rubik:wght@400;700&display=swap" 
     rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
