--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=7"/>
+    <meta name="description" content="Rocio es a front-end engineer based in Houston,Tx" />
+    <title>Front-end developer/Bilingual Educator - Rocio Hernandez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
@@ -15,24 +17,24 @@
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
-  <div class="container">
+  <div class="container rounded">
    <nav class="d-flex justify-content-between">
-    <a href="/">
-     <img src="images/logo.png" alt="" class="d-none d-md-block" /> 
-     <img src="images/small-logo.jpg" alt="" class="logo d-block d-md-none" />
+    <a href="/" title="Homepage">
+     <img src="images/logo.png" alt="Rocio Logo" class="d-none d-md-block" /> 
+     <img src="images/small-logo.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
    </a>
      <ul>
       <li class="active">
-        <a href="/"> Home </a>
+        <a href="/" title="Homepage"> Home </a>
       </li>
       <li>
-        <a href="/about.html"> About </a>
+        <a href="/about.html" title="About Rocio"> About </a>
       </li>
       <li>
-        <a href="/work.html"> Work </a>
+        <a href="/work.html" title="Rocio's work"> Work </a>
       </li>
       <li>
-        <a href="/contact.html"> Contact </a>
+        <a href="/contact.html" title="Contact Rocio"> Contact </a>
       </li>
      </ul>
    </nav>
@@ -42,7 +44,8 @@
         <h1>Rocio Hernandez</h1>
         <h2 class="mb-5">Font-End Developer & Bilingual Educator based in Houston, TX</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>   
+            <a href="/contact.html" class="btn btn-branding" 
+            title="Contact me">Contact me</a>   
         </div>
     </div>
     <p class="text-center m-5">
@@ -51,8 +54,8 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/mexican-cuisine.jpg"  class="img-fluid" 
-            alt="mexican-cuisine-app-image" />
+            <img src="images/mexican-cuisine.jpg"  class="img-fluid shadow rounded" 
+            alt="Mexican cuisine project preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -91,14 +94,14 @@
          </div>
         </div>
         <div class="col d-none d-lg-block">
-            <img src="images/weather-app.jpg"  class="img-fluid" 
-            alt="weather-app-image" />
+            <img src="images/weather-app.jpg"  class="img-fluid shadow rounded" 
+            alt="Weather project preview" />
         </div>
      </div>
      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/torta-de-lomo.jpg"  class="img-fluid" 
-            alt="torta-de-lomo-app-image" />
+            <img src="images/torta-de-lomo.jpg"  class="img-fluid shadow p-3 mb-5 rounded" 
+            alt="I love tortas project preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -120,7 +123,7 @@
         <div class="row mb-5">
           <div class="col">
             <div class="project-description">
-             <h2 class="mb-5">World Clock</h2>
+             <h2 class="mb-5 mt-5">World Clock</h2>
              <p class="mb-5 text-muted">
               If you want to have access to time for several locations, this 
               application will be a great selection to have at your fingertips. 
@@ -132,34 +135,55 @@
            </div>
           </div>
           <div class="col d-none d-lg-block">
-              <img src="images/world-clock-app.jpg"  class="img-fluid" 
-              alt="weather-app-image" />
+              <img src="images/world-clock-app.jpg"  class="img-fluid shadow rounded" 
+              alt="World Clock project preview" />
           </div>
        </div>
      </div>
      <footer>
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
         <div>
-          <h4>Work Inquiry</h4>
+          <h3>Work Inquiry</h3>
           <p class="text-muted">Let's work together</p>
         </div>
         <div>
-          <a href="" class="btn btn-branding mt-3"> Contact me </a>
+          <a 
+          href="/contact.html" 
+          class="btn btn-branding mt-3" 
+          title="Contact Rocio"
+          > 
+          Contact me 
+          </a>
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:rociohernandez_11.com" class="email-link">
+        <a 
+        href="mailto:rociohernandez_11.com" 
+        class="email-link" 
+        title="Email Rocio"
+        >
           rociohernandez_11@yahoo.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/rociohleija" target="_blank">
+        <a 
+        href="https://github.com/rociohleija" 
+        target="_blank" 
+        title="GitHub Profile"
+        >
           <i class="fab fa-github"></i>
         </a>
         <a href="https://www.linkedin.com/in/rocio-hernandez-10b36b27b/" target="_blank">
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
+      <p class="text-center mt-5">
+       👩‍💻 This project was coded by Rocio Hernandez, and it 
+       is  
+       <a href="https://github.com/rociohleija" target="_blank">
+       open-sourced.
+       </a>
+      </p>
     </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
