--- a/work.html
+++ b/work.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=7"/>
+    <meta name="description" content="Projects created by Rocio" />
+    <title>Rocio's work - Rocio Hernandez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
@@ -11,10 +13,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Rubik:wght@400;700&display=swap" 
     rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+     <a href="/" title="Homepage">
+      <img src="images/logo.png" alt="Rocio Logo" class="d-none d-md-block" /> 
+      <img src="images/small-logo.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
+    </a>
+      <ul>
+       <li>
+         <a href="/" title="Homepage"> Home </a>
+       </li>
+       <li>
+         <a href="/about.html" title="About Rocio"> About </a>
+       </li>
+       <li class="active">
+         <a href="/work.html" title="Rocio's work"> Work </a>
+       </li>
+       <li>
+         <a href="/contact.html" title="Contact Rocio"> Contact </a>
+       </li>
+      </ul>
+    </nav>
+   </div>
   <div class="content-container container">
    <div class="content">
     <h1 class="mb-5">
@@ -24,30 +48,75 @@
     <div class="row">
       <div class="col-md-6 mb-4" >
         <img src="images/mexican-cuisine.jpg" 
-        class="img-fluid rounded" alt="mexican-app-image" />
+        class="img-fluid rounded mexican-cuisine-image" alt="Mexican cuisine project preview" />
         <h3 class="text-center m-0">Mexican Cuisine App</h3>
         <p class="text-center text-muted">Built with HTML and CSS</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/weather-app.jpg" 
-        class="img-fluid mb-3 rounded" alt="mexican-app-image" />
+        class="img-fluid mb-3 rounded weather-image" alt="Weather project preview" />
         <h3 class="text-center m-0">Weather App</h3>
         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/torta-de-lomo.jpg" 
-        class="img-fluid mb-3 rounded" alt="torta-de-lomo" />
+        class="img-fluid mb-3 rounded torta-image" alt="I love tortas! Project preview" />
         <h3 class="text-center m-0">I Love Tortas App!</h3>
         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/world-clock-app.jpg" 
-        class="img-fluid mb-3 rounded" alt="world-clock-app" />
+        class="img-fluid mb-3 rounded world-clock-image" alt="World clock project preview" />
         <h3 class="text-center m-0">World Clock App</h3>
         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
       </div>  
     </div>
    </div>
+   <footer>
+    <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+      <div>
+        <h3>Work Inquiry</h3>
+        <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+        <a 
+        href="/contact.html" 
+        class="btn btn-branding mt-3" 
+        title="Contact Rocio"
+        > 
+        Contact me 
+        </a>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center mb-5">
+      <a 
+      href="mailto:rociohernandez_11.com" 
+      class="email-link" 
+      title="Email Rocio"
+      >
+        rociohernandez_11@yahoo.com
+      </a>
+    </div>
+    <div class="social-links d-flex justify-content-center">
+      <a 
+      href="https://github.com/rociohleija" 
+      target="_blank" 
+      title="GitHub Profile"
+      >
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/rocio-hernandez-10b36b27b/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+    <p class="text-center mt-5">
+     👩‍💻 This project was coded by Rocio Hernandez, and it 
+     is  
+     <a href="https://github.com/rociohleija" target="_blank">
+     open-sourced.
+     </a>
+    </p>
+  </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
