--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
-    <meta name="description" content="About Rocio Hernandez Front-end developer/Bilingual Educator" />
+    <meta name="description" content="About Rocio Hernandez eLearning Developer/Front-end developer/Bilingual Educator" />
     <title>About Rocio - Rocio Hernandez</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -48,7 +48,7 @@
         Hi I am Rocio Hernandez
     </h1>
     <h2 class="mb-4">
-        Frontend Developer, based in Houston, Tx
+        eLearning Developer & Frontend Developer, based in Houston, Tx
     </h2>
     <p class="mb-5">
         I'm a Front-end developer with an Educational background. As a bilingual educator 
