--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="hero">
         <h3>👋 Hello, I'm</h3>
         <h1>Rocio Hernandez</h1>
-        <h2 class="mb-5">Font-End Developer & Bilingual Educator based in Houston, TX</h2>
+        <h2 class="mb-5">eLearning Developer & Font-End Developer based in Houston, TX</h2>
         <div>
             <a href="/contact.html" class="btn btn-branding" 
             title="Contact me">Contact me</a>   
