Added wording to the about page

--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
         eLearning Developer & Frontend Developer, based in Houston, Tx
     </h2>
     <p class="mb-5">
-        I'm a Front-end developer with an Educational background. As a bilingual educator 
-        I love to teach, create resources, present, be open-minded of new skills that I 
+        I'm a E-Learner Developer and Front-end developer with a background on education. As a bilingual educator 
+        I love to train, create e-Learning content, present, be open-minded of new skills that I 
         can implement in my every day life. Coding is one amazing way to
         to construct a beautiful design or as I call it in Education, "resource." 
         In this website I will be presenting projects that I have made along
