Change wording to my landing page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
-    <meta name="description" content="Rocio es a front-end engineer based in Houston,Tx" />
-    <title>Front-end developer/Bilingual Educator - Rocio Hernandez</title>
+    <meta name="description" content="Rocio is a front-end and eLearning developer based in Houston,Tx" />
+    <title>e-Learning Developer/Front-End-Developer - Rocio Hernandez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
@@ -49,7 +49,7 @@
         </div>
     </div>
     <p class="text-center m-5">
-        Featured Project which my best projects be choice to show
+        Check out some of my featured projects below
     </p>
     <div class="container">
       <div class="row mb-5">
