Update HTML on the landing page

--- a/index.html
+++ b/index.html
@@ -60,18 +60,13 @@
         <div class="col">
           <div class="project-description">
            <h2 class="mb-5">Mexican Cuisine App</h2>
-           <p class="mb-5 text-muted">
-             One of the ways to escape to my wonderful creations is by cooking. 
-             Listening to music and dancing while I'm making a delicious meal is 
-             my go-to for relaxation. I love to do it as loved ones come together 
-             and gather and make memories. 
-             </br>
-             </br>
-             In this application, you can find information about its 
-             history and delicious recipes. My roots come from a small village in 
-             Mexico, where cooking techniques are passed along from generation to 
-             generation. The techniques that make history over 
-             time are shown in a video. Hope you enjoy it!
+           <p class="mb-5 text-muted"> 
+            Knowing how to navigate through VS Code and having knowledge 
+            of the basics of program languages guided me to create an 
+            amazing application. Utilizing and implementing the basics of 
+            HTML, CSS, and Javascript is how I built this landing page 
+            about Mexican Cuisine. The page utilizes JavaScript functions 
+            to create user interaction. 
           </p>
           <a href="https://tiny-torte-e48a9e.netlify.app/" class="btn btn-branding-outline">Learn more
           </a>
