Added description of a project

--- a/work.html
+++ b/work.html
@@ -50,25 +50,25 @@
         <img src="images/mexican-cuisine.jpg" 
         class="img-fluid rounded mexican-cuisine-image" alt="Mexican cuisine project preview" />
         <h3 class="text-center m-0">Mexican Cuisine App</h3>
-        <p class="text-center text-muted">Built with HTML and CSS</p>
+        <p class="text-center text-muted">Built with HTML, CSS, and Javascript</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/weather-app.jpg" 
         class="img-fluid mb-3 rounded weather-image" alt="Weather project preview" />
         <h3 class="text-center m-0">Weather App</h3>
-        <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/torta-de-lomo.jpg" 
         class="img-fluid mb-3 rounded torta-image" alt="I love tortas! Project preview" />
         <h3 class="text-center m-0">I Love Tortas App!</h3>
-        <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/world-clock-app.jpg" 
         class="img-fluid mb-3 rounded world-clock-image" alt="World clock project preview" />
         <h3 class="text-center m-0">World Clock App</h3>
-        <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
       </div>  
     </div>
    </div>
