Removed and added images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/mexican-cuisine.jpg"  class="img-fluid shadow rounded" 
+            <img src="images/mexican-cuisine1.jpg"  class="img-fluid shadow rounded" 
             alt="Mexican cuisine project preview" />
         </div>
         <div class="col">
@@ -90,21 +90,14 @@
      </div>
      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/torta-de-lomo.jpg"  class="img-fluid shadow p-3 mb-5 rounded" 
-            alt="I love tortas project preview" />
+            <img src="images/styledictionary.jpg"  class="img-fluid shadow p-3 mb-5 rounded" 
+            alt="Style dictionary project preview" />
         </div>
         <div class="col">
           <div class="project-description">
-           <h2 class="mb-5">I Love Tortas App</h2>
+           <h2 class="mb-5">Style Dictionary App</h2>
            <p class="mb-5 text-muted">
-            Are you a fan of sandwiches, then maybe a torta can be one of your 
-            favorites? Eating a torta on the sidelines of a market, the smoke of 
-            gorditas being fried, and the freshness of the sweet aroma of fruits 
-            and vegetables while buying groceries to take to the village, are some 
-            of my childhood memories. The crispiness of the bread with many 
-            combinations and choices of meat, is de-li-cious. If you would like 
-            to know how to make a loma de torta, click at the bottom and I invite 
-            you to make one!
+
           </p>
           <a href="https://dazzling-jalebi-4a3011.netlify.app/" class="btn btn-branding-outline">Learn more
           </a>
