--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
 
     <div class="row">
       <div class="col-md-6 mb-4" >
-        <img src="images/mexican-cuisine.jpg" 
+        <img src="images/mexican-cuisine1.jpg" 
         class="img-fluid rounded mexican-cuisine-image" alt="Mexican cuisine project preview" />
         <h3 class="text-center m-0">Mexican Cuisine App</h3>
         <p class="text-center text-muted">Built with HTML, CSS, and Javascript</p>
@@ -59,7 +59,7 @@
         <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
       </div>  
       <div class="col-md-6 mb-4">
-        <img src="images/torta-de-lomo.jpg" 
+        <img src="images/styledictionary.jpg" 
         class="img-fluid mb-3 rounded torta-image" alt="I love tortas! Project preview" />
         <h3 class="text-center m-0">I Love Tortas App!</h3>
         <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
