Added images and its functions with JavaScript

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    </nav>
   </div>
     <div class="hero">
-        <h3>👋 Hello, I'm</h3>
+        <h3>Hello, I'm</h3>
         <h1>Rocio Hernandez</h1>
         <h2 class="mb-5">eLearning Developer & Font-End Developer based in Houston, TX</h2>
         <div>
@@ -54,21 +54,23 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/mexican-cuisine1.jpg"  class="img-fluid shadow rounded" 
-            alt="Mexican cuisine project preview" />
+            <img src="images/mexican-cuisine.jpg"  
+            class="img-fluid shadow rounded" 
+            alt="Mexican cuisine project preview" 
+            />
         </div>
         <div class="col">
           <div class="project-description">
-           <h2 class="mb-5">Mexican Cuisine App</h2>
+           <h2 class="mb-5">Mexican Cuisine Landing Page</h2>
            <p class="mb-5 text-muted"> 
             Knowing how to navigate through VS Code and having knowledge 
             of the basics of program languages guided me to create an 
-            amazing application. Utilizing and implementing the basics of 
-            HTML, CSS, and Javascript is how I built this landing page 
+            amazing landing page. Utilizing and implementing the basics of 
+            HTML, CSS, and Javascript is how I built this webpage 
             about Mexican Cuisine. The page utilizes JavaScript functions 
             to create user interaction. 
           </p>
-          <a href="https://tiny-torte-e48a9e.netlify.app/" class="btn btn-branding-outline">Learn more
+          <a href="/work.html" class="btn btn-branding-outline">Learn more
           </a>
          </div>
         </div>
@@ -78,28 +80,40 @@
           <div class="project-description">
            <h2 class="mb-5">Weather App</h2>
            <p class="mb-5 text-muted"> 
+            Utilizing API's, Bootstrap, real-life development workflow,
+            hosting, and advanced JavaScript is how I created this 
+            fully-functioning weather app. This weather app shows you 
+            the weather at your location and the daily forecast.
           </p>
-          <a href="https://frolicking-clafoutis-5c8cd7.netlify.app/" class="btn btn-branding-outline">Learn more
+          <a href="/work.html" class="btn btn-branding-outline">Learn more
           </a>
          </div>
         </div>
         <div class="col d-none d-lg-block">
-            <img src="images/weather-app.jpg"  class="img-fluid shadow rounded" 
-            alt="Weather project preview" />
+            <img src="images/weather-app.jpg"  
+            class="img-fluid shadow rounded" 
+            alt="Weather project preview" 
+            />
         </div>
      </div>
      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/styledictionary.jpg"  class="img-fluid shadow p-3 mb-5 rounded" 
-            alt="Style dictionary project preview" />
+            <img src="images/style-dicionary.jpg"  
+            class="img-fluid shadow p-3 mb-5 rounded" 
+            alt="Style dictionary project preview" 
+            />
         </div>
         <div class="col">
           <div class="project-description">
            <h2 class="mb-5">Style Dictionary App</h2>
            <p class="mb-5 text-muted">
-
+            This dicitionary app was built with React incorporating 
+            the most popular tools and technologies. It is enhace 
+            with other frameworks such as Bootstrap. If your are 
+            curious about the definition of a word this 
+            application is your ideal app to use. 
           </p>
-          <a href="https://dazzling-jalebi-4a3011.netlify.app/" class="btn btn-branding-outline">Learn more
+          <a href="/work.html" class="btn btn-branding-outline">Learn more
           </a>
          </div>
         </div>
@@ -111,15 +125,19 @@
               If you want to have access to time for several locations, this 
               application will be a great selection to have at your fingertips. 
               From Kuala Lumpur to Valencia are several options to know the time 
-              at their location. Select this app as your time keeper!
+              at their location. I built this app with advanced Javascript, 
+              API, and with the latest framework.
+
             </p>
-            <a href="https://musical-squirrel-18b301.netlify.app/" class="btn btn-branding-outline">Learn more
+            <a href="/work.html" class="btn btn-branding-outline">Learn more
             </a>
            </div>
           </div>
           <div class="col d-none d-lg-block">
-              <img src="images/world-clock-app.jpg"  class="img-fluid shadow rounded" 
-              alt="World Clock project preview" />
+              <img src="images/world-clock-app.jpg"  
+              class="img-fluid shadow rounded" 
+              alt="World Clock project preview" 
+              />
           </div>
        </div>
      </div>
