--- a/work.html
+++ b/work.html
@@ -47,28 +47,68 @@
 
     <div class="row">
       <div class="col-md-6 mb-4" >
-        <img src="images/mexican-cuisine1.jpg" 
-        class="img-fluid rounded mexican-cuisine-image" alt="Mexican cuisine project preview" />
-        <h3 class="text-center m-0">Mexican Cuisine App</h3>
+        <img src="images/mexican-cuisine.jpg" 
+        class="img-fluid mb-3 rounded mexican-cuisine-image" 
+        alt="Mexican cuisine project preview" 
+        />
+        <h3 class="text-center m-0">Mexican Cuisine Landing Page</h3>
         <p class="text-center text-muted">Built with HTML, CSS, and Javascript</p>
+        <div class="text-center mt-4 mb-5">
+          <a
+            href="https://mexicancuisine.netlify.app/"
+            class="btn btn-branding-outline"
+            target="_blank"
+            >Launch Project</a
+          >
+        </div>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/weather-app.jpg" 
-        class="img-fluid mb-3 rounded weather-image" alt="Weather project preview" />
+        class="img-fluid mb-3 rounded weather-image" 
+        alt="Weather project preview" 
+        />
         <h3 class="text-center m-0">Weather App</h3>
-        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
+        <p class="text-center text-muted">Built with HTML, an active API, advanced CSS, and JavaScript</p>
+        <div class="text-center mt-4 mb-5">
+          <a
+            href="https://citytemperaturesearch.netlify.app/"
+            class="btn btn-branding-outline"
+            target="_blank"
+            >Launch Project</a
+          >
+        </div>
       </div>  
       <div class="col-md-6 mb-4">
-        <img src="images/styledictionary.jpg" 
-        class="img-fluid mb-3 rounded torta-image" alt="I love tortas! Project preview" />
-        <h3 class="text-center m-0">I Love Tortas App!</h3>
-        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
+        <img src="images/style-dicionary.jpg" 
+        class="img-fluid mb-3 rounded style-dictionary-image" 
+        alt="Style Dictionary Project preview" 
+        />
+        <h3 class="text-center m-0">Style Dictionary App</h3>
+        <p class="text-center text-muted">Built with HTML, an active API, advanced CSS, and React</p>
+        <div class="text-center mt-4 mb-5">
+          <a
+            href="https://styledictionary.netlify.app/"
+            class="btn btn-branding-outline"
+            target="_blank"
+            >Launch Project</a
+          >
+        </div>
       </div>  
       <div class="col-md-6 mb-4">
         <img src="images/world-clock-app.jpg" 
-        class="img-fluid mb-3 rounded world-clock-image" alt="World clock project preview" />
+        class="img-fluid mb-3 rounded world-clock-image" 
+        alt="World clock project preview" 
+        />
         <h3 class="text-center m-0">World Clock App</h3>
-        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
+        <p class="text-center text-muted">Built with HTML, an active API, advanced CSS, and JavaScript</p>
+        <div class="text-center mt-4 mb-5">
+          <a
+            href="https://timeearth.netlify.app/"
+            class="btn btn-branding-outline"
+            target="_blank"
+            >Launch Project</a
+          >
+        </div>
       </div>  
     </div>
    </div>
