Update the about page

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
         I love to train, create e-Learning content, present, be open-minded of new skills that I 
         can implement in my every day life. Coding is one amazing way to
         to construct a beautiful design or as I call it in Education, "resource." 
-        In this website I will be presenting projects that I have made along
-        the way in SheCodes Workshops. 
+        In this website I will be presenting projects that I have made with JavaScript, HTML, advanced CSS, and libraries 
+        like React. 
     </p>
     <a href="/work.html" class="btn btn-branding">View my projects</a>
         </div>
