Added images to my folder

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div class="container rounded">
    <nav class="d-flex justify-content-between">
     <a href="/" title="Homepage">
-     <img src="images/logo.png" alt="Rocio Logo" class="d-none d-md-block" /> 
-     <img src="images/small-logo.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
+     <img src="images/initials.jpg" alt="Rocio Logo" class="logo-initials d-none d-md-block" /> 
+     <img src="images/flowers.png" alt="Rocio Logo" class="logo d-block d-md-none" />
    </a>
      <ul>
       <li class="active">
