Change the logo size

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
     <meta name="description" content="About Rocio Hernandez eLearning Developer/Front-end developer/Bilingual Educator" />
-    <title>About Rocio - Rocio Hernandez</title>
+    <title>About Rocio - Rocio Hernάndez</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -21,8 +21,8 @@
   <div class="container">
     <nav class="d-flex justify-content-between">
      <a href="/" title="Homepage">
-      <img src="images/logo.png" alt="Rocio Logo" class="d-none d-md-block" /> 
-      <img src="images/small-logo.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
+      <img src="images/initials.jpg" alt="Rocio Logo" class="logo-initials d-none d-md-block" /> 
+      <img src="images/flowers.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
     </a>
       <ul>
        <li>
@@ -45,7 +45,7 @@
     <div class="col-lg-6">
         <div class="content">
     <h1 class="mb-4">
-        Hi I am Rocio Hernandez
+        Hi I am Rocio Hernández 
     </h1>
     <h2 class="mb-4">
         eLearning Developer & Frontend Developer, based in Houston, Tx
