--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
+    <link rel="icon" href="images/initials.jpg" />
     <meta name="description" content="Rocio is a front-end and eLearning developer based in Houston,Tx" />
-    <title>e-Learning Developer/Front-End-Developer - Rocio Hernandez</title>
+    <title>Rocio Hernάndez  Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
@@ -17,11 +18,12 @@
     <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
+  <header>
   <div class="container rounded">
    <nav class="d-flex justify-content-between">
     <a href="/" title="Homepage">
      <img src="images/initials.jpg" alt="Rocio Logo" class="logo-initials d-none d-md-block" /> 
-     <img src="images/flowers.png" alt="Rocio Logo" class="logo d-block d-md-none" />
+     <img src="images/flowers.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
    </a>
      <ul>
       <li class="active">
@@ -41,7 +43,7 @@
   </div>
     <div class="hero">
         <h3>Hello, I'm</h3>
-        <h1>Rocio Hernandez</h1>
+        <h1>Rocio Hernández</h1>
         <h2 class="mb-5">eLearning Developer & Font-End Developer based in Houston, TX</h2>
         <div>
             <a href="/contact.html" class="btn btn-branding" 
