--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
     <meta name="description" content="Projects created by Rocio" />
-    <title>Rocio's work - Rocio Hernandez</title>
+    <title>Rocio's work - Rocio Hernάndez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4f9f9efba6.js" crossorigin="anonymous"></script>
@@ -20,8 +20,8 @@
   <div class="container">
     <nav class="d-flex justify-content-between">
      <a href="/" title="Homepage">
-      <img src="images/logo.png" alt="Rocio Logo" class="d-none d-md-block" /> 
-      <img src="images/small-logo.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
+      <img src="images/initials.jpg" alt="Rocio Logo" class="logo-initials d-none d-md-block" /> 
+      <img src="images/flowers.jpg" alt="Rocio Logo" class="logo d-block d-md-none" />
     </a>
       <ul>
        <li>
