Added an icon to the page's tab

--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
+    <link rel="icon" href="images/initials.jpg" />
     <meta name="description" content="Projects created by Rocio" />
     <title>Rocio's work - Rocio Hernάndez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
