--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
+    <link rel="icon" href="images/initials.jpg" />
     <meta name="description" content="About Rocio Hernandez eLearning Developer/Front-end developer/Bilingual Educator" />
     <title>About Rocio - Rocio Hernάndez</title>
 
