--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=7"/>
+    <link rel="icon" href="images/initials.jpg" />
     <meta name="description" content="Contact Rocio Hernandez - Front-end developer/Bilingual Educator" />
     <title>Contact Rocio - Rocio Hernάndez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
