Added an accent to the words

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         Hi I am Rocio Hernández 
     </h1>
     <h2 class="mb-4">
-        eLearning Developer & Frontend Developer, based in Houston, Tx
+        eLearning Developer & Front-end Developer, based in Houston, Tx
     </h2>
     <p class="mb-5">
         I'm a E-Learner Developer and Front-end developer with a background on education. As a bilingual educator 
@@ -105,7 +105,7 @@
       </a>
     </div>
     <p class="text-center mt-5">
-     👩‍💻 This project was coded by Rocio Hernandez, and it 
+     👩‍💻 This project was coded by Rocio Hernández, and it 
      is  
      <a href="https://github.com/rociohleija" target="_blank">
      open-sourced.
