--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
       </a>
     </div>
     <p class="text-center mt-5">
-     👩‍💻 This project was coded by Rocio Hernandez, and it 
+     👩‍💻 This project was coded by Rocio Hernández, and it 
      is  
      <a href="https://github.com/rociohleija" target="_blank">
      open-sourced.
